--- a/FirstOpenglProject/FirstOpenglProject.vcxproj
+++ b/FirstOpenglProject/FirstOpenglProject.vcxproj
@@ -129,6 +129,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\Application.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
