--- a/FirstOpenglProject/FirstOpenglProject.vcxproj.filters
+++ b/FirstOpenglProject/FirstOpenglProject.vcxproj.filters
@@ -24,5 +24,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="res\shaders\Basic.shader" />
   </ItemGroup>
 </Project>
