--- a/FirstOpenglProject/imgui.ini
+++ b/FirstOpenglProject/imgui.ini
@@ -3,6 +3,10 @@ Pos=60,60
 Size=400,400
 
 [Window][Hello, world!]
-Pos=1024,357
-Size=339,180
+Pos=506,249
+Size=339,204
+
+[Window][Inspector:]
+Pos=498,170
+Size=339,94
 
